cosmetic changes to prevent scrollbars (in windows)

--- a/_sass/_live-editor.scss
+++ b/_sass/_live-editor.scss
@@ -27,7 +27,7 @@
     > .extras {
       position:absolute;
       right:0;
-      top:8px;
+      bottom:8px;
       font-size:12px;
       line-height:1;
       padding: 2px 24px 2px 2px;
